# sm-builder

./: .gitignore  .travis.yml  README.md  pyproject.toml  requirements.txt  setup.py
scripts/: smbuilder  smstruct  smversion
src/smbuilder/: __init__.py  base.py  builder.py  includescanner.py  parser.py  structbuilder.py  test_cases.py  util.py
src/smbuilder/plugins/: plugin_whitelist.sp  smbuild
src/smbuilder/plugins/configs/: plugin_whitelist.cfg
src/smbuilder/testpackages/test_package/: my_server_override.cfg  server.cfg  smbuild  test_plugin.sp  testlib.inc  testlib_extras.inc
src/smbuilder/testpackages/test_package2/: smbuild  test_plugin2.sp
